--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "gulp-livereload": "^2.1.0",
     "gulp-cache": "^0.1.11",
     "gulp-jshint": "^1.6.2",
-    "gulp-imagemin": "^0.6.1"
+    "gulp-imagemin": "^0.6.1",
+    "tiny-lr": "0.0.7",
+    "gulp-connect": "^2.0.5",
+    "gulp-uglify": "^0.3.0"
   },
   "author": "Simon Henrotte",
   "license": "ISC"
